Complete ngrx/store implementation

--- a/frontend-angular/src/app/dashboard/dashboard.component.html
+++ b/frontend-angular/src/app/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 <app-dashboard-header></app-dashboard-header>
-<ng-container *ngIf="spendingByService | async; let services; else loading">
+<ng-container *ngIf="spendingByService$ | async as services; else loading">
   <app-dashboard-body [services]="services"></app-dashboard-body>
 </ng-container>
 <ng-template #loading>
