--- a/frontend-angular/src/app/dashboard/dashboard.component.html
+++ b/frontend-angular/src/app/dashboard/dashboard.component.html
@@ -1,6 +1,8 @@
 <app-dashboard-header></app-dashboard-header>
-<ng-container *ngIf="spendingByService$ | async as services; else loading">
-  <app-dashboard-body [services]="services"></app-dashboard-body>
+<ng-container *ngIf="spendingByService$ | async as services">
+  <ng-container *ngIf="services.length else loading">
+    <app-dashboard-body [services]="services"></app-dashboard-body>
+  </ng-container>
 </ng-container>
 <ng-template #loading>
   Loading...
