--- a/frontend-angular/src/app/user-views/components/user-views-card/user-views-card.component.scss
+++ b/frontend-angular/src/app/user-views/components/user-views-card/user-views-card.component.scss
@@ -10,11 +10,40 @@
     }
   }
 
+  .view-title {
+    font-size: 20px;
+  }
+
+  .header-divider {
+    margin-bottom: 20px;
+  }
+
   mat-card-content {
     p {
       display: flex;
       justify-content: space-between;
       padding: 5px 0px;
     }
+    
+    .service-info {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+
+      .service-info-right {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        mat-icon {
+          cursor: pointer;
+          font-size: 20px;
+        }
+      }
+    }
+  }
+
+  mat-form-field {
+    width: 100%;
   }
 }
